--- a/src/components/authentication/AboutUs.module.css
+++ b/src/components/authentication/AboutUs.module.css
@@ -5,11 +5,14 @@
     font-family: "Poppins", sans-serif;
     background-color: ;
   } */
+
+  @import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500&family=Poppins:wght@100;200;300;400;500;700;800;900&display=swap');
+
   .row {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 2em 1em;
+    padding: 3em 1em;
     text-align: center;
     justify-content: center;
   }
@@ -17,21 +20,17 @@
     width: 100%;
     padding: 0.5em 0;
   }
-  .heading {
-    width: 100%;
-    text-align: center;
-    font-size: 3.5em;
-    color: #1f003b;
-  }
+
   .card {
     box-shadow: 0 0 2.4em rgba(25, 0, 58, 0.1);
     padding: 3.5em 1em;
     border-radius: 0.6em;
-    color: #1f003b;
+    color: #004643;
+    font-family: 'Poppins', sans-serif;
     cursor: pointer;
     transition: 0.3s;
-    background-color: #ffffff;
-    margin: 3%;
+    background-color: #fffffe;
+    margin: 1%;
     width: 300px;
     margin: 40px;
     
@@ -39,7 +38,7 @@
   .card .imgContainer {
     width: 8em;
     height: 8em;
-    background-color: #a993ff;
+    background-color: #abd1c6;
     padding: 0.5em;
     border-radius: 50%;
     margin: 0 auto 2em auto;
@@ -59,7 +58,7 @@
   }
   .iconz {
     width: 50%;
-    color: #6045ea;
+    color: #001e1d;
     min-width: 180px;
     display: flex;
     justify-content: center;
@@ -75,14 +74,15 @@
     font-size: 1.4em;
   }
   .card:hover {
-    background: linear-gradient(#6045ea, #8567f7);
-    color: #ffffff;
+    background: linear-gradient(#044d4a, #024d4a);
+    color: #fffffe;
+    transform: scale(1.15)
   }
-  .card:hover .img-container {
+  .card:hover .imgContainer {
     transform: scale(1.15);
   }
   .card:hover .iconz {
-    color: white;
+    color: #f9bc60;
   }
   @media screen and (min-width: 768px) {
     section {
@@ -102,3 +102,79 @@
       padding: 0 1em;
     } */
   }
+
+
+  
+
+.bgColor{
+    background-color:#abd1c6;
+    margin: auto;
+    padding: 2%;
+
+}
+.h1{
+    color: #001e1d;
+    font-family: 'Poppins', sans-serif;
+    font-size: 3rem;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 2%;
+}
+
+.para1{
+    color: #0f3433;
+    font-family: 'Lora', serif;
+    font-weight: 400;
+    font-size: 18px;
+    text-align: center;
+}
+
+.para{
+    color: #0f3433;
+    font-family: 'Lora', serif;
+    font-weight: 400;
+    font-size: 18px;
+ 
+}
+.para2{
+    color: #0f3433;
+    font-family: 'Lora', serif;
+    font-weight: 600;
+    font-size: 18px;
+ 
+}
+
+.h2{
+    color: #001e1d;
+    font-family: 'Poppins', sans-serif;
+    font-size: 2rem;
+    font-weight: 500;
+    text-align: center;
+}
+
+.link{
+    color: #e16162;
+}
+
+.carr{
+    color: #0f3433;
+    font-family: 'Lora', serif;
+    font-weight: 300;
+    font-size: 18px;
+    
+}
+.first{
+  background-color: #fffffe;
+  border-radius: 20px;
+  padding: 4%;
+  margin-bottom: 4%;
+}
+.first h1{
+  text-decoration: underline;
+}
+
+.contact{
+  background-color: #fffffe;
+  width: 100%;
+  padding: 4%;
+}
