--- a/src/components/google-drive/LandingPage.css
+++ b/src/components/google-drive/LandingPage.css
@@ -1,9 +1,11 @@
 
+  @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Open+Sans:wght@300;400;500;700&family=Poppins:wght@100;200;300;400;500;700;800&family=Sintony:wght@400;700&display=swap');
+
 .hero{
     position: relative;
     width: 100%;
     height: 100vh;
-    background: #eff4fd;
+    background: #fef6e4;
     position: relative;
 }
 
@@ -29,12 +31,13 @@ nav ul li {
 
 nav ul li a{
     text-decoration: none;
-    color: #000;
+    color: #00214d;
+    font-family: 'DM Sans', sans-serif;
     font-weight: bold;
 }
 
 nav ul li a:hover{
-    color: #004643;
+    color: #345178;
 }
 
 .detel{
@@ -43,18 +46,21 @@ nav ul li a:hover{
 }
 
 .detel h1{
-    font-size: 50px;
-    color: #212121;
-    margin-bottom: 20px;
+    font-size: 60px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 550;
+    color: #004643;
+    margin-bottom: 15px;
 }
 
 span{
-    color: #004643;
+    color: #f45d48;
     
 }
 
 .detel p{
-    color: #555;
+    color: #001e1d;
+    font-family: 'DM Sans', sans-serif;
     line-height: 22px;
 }
 
@@ -62,8 +68,9 @@ span{
     background: #004643;
     padding: 10px 18px;
     text-decoration: none;
-    font-weight: bold;
+    font-weight: 400;
     color: #fff;
+    font-family: 'Poppins', sans-serif;
     display: inline-block;
     margin: 30px 2px;
     border-radius: 5px;
@@ -72,8 +79,9 @@ span{
     background: #004643;
     padding: 10px 18px;
     text-decoration: none;
-    font-weight: bold;
+    font-weight: 400;
     color: #fff;
+    font-family: 'Poppins', sans-serif;
     display: inline-block;
     margin: 30px 2px;
     border-radius: 5px;
@@ -100,8 +108,8 @@ span{
 }
 
 .images{
-    width: 45%;
-    height: 80%;
+    width: 55%;
+    height: 90%;
     position: absolute;
     bottom: 0;
     right: 100px;
@@ -133,6 +141,7 @@ span{
 .social a{
     font-size: 30px;
     color: #212121;
+
     margin-right: 20px;
 }
 
